--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,26 +19,26 @@ jobs:
 
     steps:
       -
-        name: Checkout
+        name: Checkout source
         uses: actions/checkout@v2.5.0
       -
-        name: Docker meta
+        name: Set Docker metadata
         id: meta
         uses: docker/metadata-action@v4.1.1
         with:
           # list of Docker images to use as base name for tags
-          images: ${{ secrets.DOCKER_HUB_USERNAME }}/nslcd-sidecar
+          images: ${{ github.GITHUB_REPOSITORY }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=unstable
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
       -
-        name: Login to Docker Hub
+        name: Login to GHCR
         uses: docker/login-action@v2.1.0
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.2.1
@@ -55,5 +55,5 @@ jobs:
             VCS_REF=${{ github.GITHUB_SHA }}
             BUILD_DATE=${{ github.event.repository.updated_at}}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/nslcd-sidecar:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/nslcd-sidecar:buildcache,mode=max
+          cache-from: type=registry,ref=${{ github.GITHUB_REPOSITORY}}:buildcache
+          cache-to: type=registry,ref=${{ github.GITHUB_REPOSITORY }}:buildcache,mode=max
