--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,22 +23,24 @@ jobs:
         uses: actions/checkout@v2.5.0
       -
         name: Set image metadata
-        id: meta
+        id: tags
         uses: docker/metadata-action@v4.1.1
         with:
           # list of Docker images to use as base name for tags
-          images: ${{ github.repository }}
+          images: ghcr.io/${{ github.repository }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=raw,value=unstable
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
+
+            ghcr.io/${{ github.repository }}:latest
       -
         name: Login to GHCR
         uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
@@ -50,7 +52,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.tags.outputs.tags }}
           build-args: |
             VCS_URL=${{ github.GITHUB_SERVER_URL }}/${{ github.repository }}
             VCS_REF=${{ github.GITHUB_SHA }}
