--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # -
+      #   name: Checkout source
+      #   uses: actions/checkout@v2.5.0
       -
-        name: Checkout source
-        uses: actions/checkout@v2.5.0
+        name: Login to GHCR
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
       -
         name: Set image metadata
         id: tags
@@ -33,15 +40,6 @@ jobs:
             type=raw,value=unstable
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
-
-            ghcr.io/${{ github.repository }}:latest
-      -
-        name: Login to GHCR
-        uses: docker/login-action@v2.1.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.2.1
@@ -54,9 +52,9 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.tags.outputs.tags }}
           build-args: |
-            VCS_URL=${{ github.GITHUB_SERVER_URL }}/${{ github.repository }}
-            VCS_REF=${{ github.GITHUB_SHA }}
-            BUILD_DATE=${{ github.event.repository.updated_at}}
+            VCS_URL=${{ github.server_url }}/${{ github.repository }}
+            VCS_REF=${{ github.sha }}
+            BUILD_DATE=${{ github.event.repository.updated_at }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository}}:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:buildcache,mode=max
+          # cache-from: type=registry,ref=ghcr.io/${{ github.repository}}:buildcache
+          # cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:buildcache,mode=max
