added password args

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "certmanager",
         "CRTFILE",
+        "DBPASS",
+        "DBUSER",
         "KEYFILE",
         "LOGLEVEL",
         "RENEWWINDOW"
