--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,7 @@ jobs:
             type=raw,value=unstable
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
+            type=sha
       -
         name: Build and push
         uses: docker/build-push-action@v3
